// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncentiveCalculator includes an aggregate row with multiple products 1`] = `
<Fragment>
  <Jumbotron
    fluid={false}
  >
    <div
      className="jsx-3958786356"
      style={
        Object {
          "marginBottom": "30px",
        }
      }
    >
      <h2
        className="jsx-3958786356"
      >
        Incentive by Product:
      </h2>
      <p
        className="jsx-3958786356"
      >
        This formula gives the partial incentive for each product reported in 
        <br
          className="jsx-3958786356"
        />
        the CIIP application. The total Incentive is the sum of these partial incentives.
        <br
          className="jsx-3958786356"
        />
      </p>
    </div>
    <IncentiveSegmentFormula />
  </Jumbotron>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive="lg"
    striped={true}
  >
    <thead
      className="jsx-3958786356"
    >
      <tr
        className="jsx-3958786356"
      >
        <th
          className="jsx-3958786356"
        >
          Product Name
        </th>
        <th
          className="jsx-3958786356"
        >
          Emission Intensity
        </th>
        <th
          className="jsx-3958786356"
        >
          Benchmark
        </th>
        <th
          className="jsx-3958786356"
        >
          Eligibility Threshold
        </th>
        <th
          className="jsx-3958786356"
        >
          Incentive Multiplier
        </th>
        <th
          className="jsx-3958786356"
        >
          Payment Allocation
        </th>
        <th
          className="jsx-3958786356"
        >
          Incentive Ratio
        </th>
        <th
          className="jsx-3958786356"
        >
          Calculated Incentive (CAD)
        </th>
        <th
          className="jsx-3958786356"
        >
          Maximum Incentive (CAD)
        </th>
      </tr>
    </thead>
    <tbody
      className="jsx-3958786356"
    >
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "0",
            "incentiveProductMax": "0",
            "rowId": 1,
          }
        }
        key="1"
      />
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "13.722",
            "incentiveProductMax": "15.354",
            "rowId": 2,
          }
        }
        key="2"
      />
      <tr
        className="jsx-3958786356"
      >
        <td
          className="jsx-3958786356"
        />
         
        <td
          className="jsx-3958786356"
        />
         
        <td
          className="jsx-3958786356"
        />
         
        <td
          className="jsx-3958786356"
        />
         
        <td
          className="jsx-3958786356"
        />
         
        <td
          className="jsx-3958786356"
        />
        <td
          className="jsx-3958786356"
        >
          0.8937084798749512
        </td>
        <td
          className="jsx-3958786356"
        >
          <Money
            amount="13.72"
          />
        </td>
        <td
          className="jsx-3958786356"
        >
          <Money
            amount="15.35"
          />
        </td>
      </tr>
    </tbody>
  </ForwardRef>
  <JSXStyle
    id="3958786356"
  >
    h2.jsx-3958786356{font-size:1.25rem;margin-botton:0.5rem;}
  </JSXStyle>
</Fragment>
`;

exports[`IncentiveCalculator should render the page 1`] = `
<Fragment>
  <Jumbotron
    fluid={false}
  >
    <div
      className="jsx-3958786356"
      style={
        Object {
          "marginBottom": "30px",
        }
      }
    >
      <h2
        className="jsx-3958786356"
      >
        Incentive by Product:
      </h2>
      <p
        className="jsx-3958786356"
      >
        This formula gives the partial incentive for each product reported in 
        <br
          className="jsx-3958786356"
        />
        the CIIP application. The total Incentive is the sum of these partial incentives.
        <br
          className="jsx-3958786356"
        />
      </p>
    </div>
    <IncentiveSegmentFormula />
  </Jumbotron>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive="lg"
    striped={true}
  >
    <thead
      className="jsx-3958786356"
    >
      <tr
        className="jsx-3958786356"
      >
        <th
          className="jsx-3958786356"
        >
          Product Name
        </th>
        <th
          className="jsx-3958786356"
        >
          Emission Intensity
        </th>
        <th
          className="jsx-3958786356"
        >
          Benchmark
        </th>
        <th
          className="jsx-3958786356"
        >
          Eligibility Threshold
        </th>
        <th
          className="jsx-3958786356"
        >
          Incentive Multiplier
        </th>
        <th
          className="jsx-3958786356"
        >
          Payment Allocation
        </th>
        <th
          className="jsx-3958786356"
        >
          Incentive Ratio
        </th>
        <th
          className="jsx-3958786356"
        >
          Calculated Incentive (CAD)
        </th>
        <th
          className="jsx-3958786356"
        >
          Maximum Incentive (CAD)
        </th>
      </tr>
    </thead>
    <tbody
      className="jsx-3958786356"
    >
      <Relay(IncentiveSegmentContainer)
        ciipIncentiveByProduct={
          Object {
            " $fragmentRefs": Object {
              "IncentiveSegmentContainer_ciipIncentiveByProduct": true,
            },
            "incentiveProduct": "0",
            "incentiveProductMax": "0",
            "rowId": 1,
          }
        }
        key="1"
      />
    </tbody>
  </ForwardRef>
  <JSXStyle
    id="3958786356"
  >
    h2.jsx-3958786356{font-size:1.25rem;margin-botton:0.5rem;}
  </JSXStyle>
</Fragment>
`;
